--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
+    "bootstrap": "^4.1.2",
+    "i": "^0.3.6",
+    "lodash": "^4.17.10",
+    "npm": "^6.2.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.1"
@@ -15,6 +23,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "babel-plugin-lodash": "^3.3.4",
     "prettier": "^1.13.7"
   }
 }
